fix(CARD-1005): added distributed tracing,  run config, security config (temp) and get ayah endpoint without logic in service