@@ -25,11 +25,21 @@ repositories {
 	mavenCentral()
 }
 
+tasks.withType(JavaCompile).each {
+	it.options.compilerArgs.add('--enable-preview')
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	implementation 'org.zalando:logbook-logstash:3.9.0'
+	implementation 'org.zalando:logbook-netty:3.9.0'
+	implementation 'org.zalando:logbook-spring-webflux:3.9.0'
+	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.2.5'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
